k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: portafolio-service
  namespace: portfolio-app
  annotations:
    cloud.google.com/backend-config: '{"default": "portafolio-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector: 
    app: portfolio-backend
  ports: 
  - port: 80
    targetPort: 8080
    protocol: TCP 
    name: http
