k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: portfolio-ingress
  namespace: portfolio-app
  annotations:
    kubernets.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend: 
          service:
            name: portfolio-service
            port:
              number: 80
